refactor(lecture-resource): lecture resource의 duration을 vo로 변경, 잘 못 맵핑 된 Method 수정, ResourceType에서 비즈니스 도메인 관리하도록 변경, db 마이그레이션 쿼리 추가